tests/errors/ty_synonym_cyclic_err/ty_synonym_cyclic_err.c
#error ty_synonym_cyclic_err.ty_synonym_cyclic_err:5:1 Cyclic type synonym is forbidden.
#error ty_synonym_cyclic_err.ty_synonym_cyclic_err:7:1 Cyclic type synonym is forbidden.
#error ty_synonym_cyclic_err.ty_synonym_cyclic_err:12:28 Type mismatch: '{error}@ty_synonym_cyclic_err.ty_synonym_cyclic_err:5:1' <> 'unit -> {?25}@ty_synonym_cyclic_err.ty_synonym_cyclic_err:12:28'.
#error ty_synonym_cyclic_err.ty_synonym_cyclic_err:12:28 Arity mismatch: expected (_, ..) -> .., but was _.
